Began refactoring the frontend
